--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords"
     content="Docklink, link, compartilhar link, compartilhar perfil, perfil em link, compartilhamento">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
